# BUD-E

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: GRASP_FAILURE_INVESTIGATION.md  GRASP_V2_V10_INVESTIGATION.md  pick_vla_training_notes.md
logs/: auto_eval_watcher.sh
results/: confirmation_FINAL_t3_k0.40_n150.json  confirmation_FINAL_t5_k0.45_maxsteps160_n100.json  env_knob_sweep.json  protocol_compare.json
scripts/: _cam_geom.py  _launch_eval.sh  _live_viewer.py  _probe_grasp_step.py  _run_task9.sh  _train_10h.sh  benchmark_random_pick.py  benchmark_scripted_pick.py  benchmark_visual_servo_pick.py  build_frame_cache.py  calibrate_grasp.py  calibrate_grasp_v2.py  check_viewer.py  collect_dagger_pick.py  confirmation_eval.py  convert_dataset_to_ee_delta.py  debug_grasp.py  debug_grasp_hypotheses.py  debug_grasp_v4.py  diag_action_sensitivity.py  diag_attach_gates.py  diag_dataset_action_error.py  diagnose_gripper_geom.py  diagnose_gripper_geom_v2.py  env_knob_sweep.py  eval_pick_ball.py  fold_teleop.py  generate_demos.py  inspect_ckpt.py  make_before_after_gif.py  make_multi_pick_video.py  make_multi_reach_gif.py  make_portfolio_renders.py  make_portfolio_videos.py  make_success_video.py  make_training_gif.py  multi_seed_eval.py  protocol_compare.py  quick_eval.py  quick_eval2.py  (+28 more)
tests/: test_action_normalization.py  test_arch_upgrades.py  test_contact_proprio.py  test_data_augment.py  test_dataset_augment_integration.py  test_dinov2_tower.py  test_dual_cam_dataset.py  test_env_runner.py  test_grasp_algorithm_isolated.py  test_grasp_retry.py  (+9 more)
(+60 files in other folders)
